syntax = "proto3";

package proto;

option go_package = "github.com/clintjedwards/gofer/proto";

import "gofer_transport.proto";

service Gofer {
  ////////////// System RPCs //////////////
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);

  ////////////// Namespace RPCs //////////////
  //
  // Namespaces are dividers for logically separating workloads. Every resource
  // belongs to a particular namespace.

  // ListNamespaces returns all registered namespaces.
  rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse);

  // CreateNamespace creates a new namespace that separates pipelines.
  rpc CreateNamespace(CreateNamespaceRequest) returns (CreateNamespaceResponse);

  // GetNamespace returns a single namespace by id.
  rpc GetNamespace(GetNamespaceRequest) returns (GetNamespaceResponse);

  // UpdateNamespace updates the details of a particular namespace by id.
  rpc UpdateNamespace(UpdateNamespaceRequest) returns (UpdateNamespaceResponse);

  // DeleteNamespace removes a namespace by id.
  rpc DeleteNamespace(DeleteNamespaceRequest) returns (DeleteNamespaceResponse);
}
